--- a/GFV/GFV/GFV.vcxproj
+++ b/GFV/GFV/GFV.vcxproj
@@ -76,10 +76,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>d2d1.lib;Windowscodecs.lib;dwrite.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -88,10 +89,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>d2d1.lib;Windowscodecs.lib;dwrite.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -102,12 +104,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>d2d1.lib;Windowscodecs.lib;dwrite.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -118,27 +121,42 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Usuario\source\repos\GFV\GFV\GFV\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>d2d1.lib;Windowscodecs.lib;dwrite.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="app\app.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="os\win\window.cpp" />
+    <ClCompile Include="src\os\font.cpp" />
+    <ClCompile Include="src\widgets\button.cpp" />
+    <ClCompile Include="src\app\app.cpp" />
+    <ClCompile Include="src\graphics\graphics.cpp" />
+    <ClCompile Include="src\graphics\image.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\os\win\window.cpp" />
+    <ClCompile Include="src\widgets\childwindow.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="app\app.h" />
-    <ClInclude Include="graphics\point.h" />
-    <ClInclude Include="graphics\rect.h" />
-    <ClInclude Include="graphics\size.h" />
-    <ClInclude Include="os\predefinedpos.h" />
-    <ClInclude Include="os\win\winadapter.h" />
-    <ClInclude Include="os\win\window.h" />
+    <ClInclude Include="src\graphics\drawable\idrawable.h" />
+    <ClInclude Include="src\graphics\drawable\imagedrawable.h" />
+    <ClInclude Include="src\graphics\drawable\rectdrawable.h" />
+    <ClInclude Include="src\os\font.h" />
+    <ClInclude Include="src\os\mousebutton.h" />
+    <ClInclude Include="src\widgets\button.h" />
+    <ClInclude Include="src\graphics\image.h" />
+    <ClInclude Include="src\graphics\graphics.h" />
+    <ClInclude Include="src\app\app.h" />
+    <ClInclude Include="src\graphics\point.h" />
+    <ClInclude Include="src\graphics\rect.h" />
+    <ClInclude Include="src\graphics\size.h" />
+    <ClInclude Include="src\os\predefinedpos.h" />
+    <ClInclude Include="src\os\win\winadapter.h" />
+    <ClInclude Include="src\os\win\window.h" />
+    <ClInclude Include="src\widgets\childwindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
